# gitpub

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  build_output.txt
.github/workflows/: test.yml
docs/: architecture.md  cli-usage.md  sliplane-integration.md
gitpub-cli/: Cargo.toml
gitpub-cli/src/: main.rs
gitpub-cli/tests/: cli_tests.rs  command_tests.rs
gitpub-core/: Cargo.toml
gitpub-core/src/: lib.rs
gitpub-core/tests/: common.rs  integration_tests.rs  repository_tests.rs
gitpub-core/tests/helpers/: mod.rs
gitpub-server/: Cargo.toml
gitpub-server/src/: auth.rs  git_http.rs  lib.rs  main.rs  rate_limit.rs
gitpub-server/src/routes/: auth.rs  mod.rs  repositories.rs
gitpub-server/tests/: api_tests.rs  auth_integration_tests.rs  common.rs
gitpub-sliplane/: Cargo.toml
gitpub-sliplane/src/: lib.rs
gitpub-sliplane/tests/: deployment_tests.rs  sliplane_tests.rs
migrations/: 001_create_users_table.sql  20260430000001_create_users_table.sql  20260430000002_create_repositories_table.sql  20260430000003_create_commits_table.sql  20260430193500_create_refresh_tokens_table.sql  20260430193747_add_email_verification_fields.sql  20260430212100_create_users_table.sql  20260430212101_create_repositories_table.sql  20260430212102_create_commits_table.sql
