[workspace]
resolver = "2"
members = [
    "gitpub-server",
    "gitpub-cli",
    "gitpub-core",
    "gitpub-sliplane"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
