[workspace]
resolver = "2"
members = [
    "gitpub-server",
    "gitpub-cli",
    "gitpub-core",
    "gitpub-sliplane"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"

# Test dependencies
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
wiremock = "0.6"
mockall = "0.13"
testcontainers = "0.23"
assert_matches = "1.5"
rstest = "0.23"
