[package]
name = "gitpub-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gitpub-core = { path = "../gitpub-core" }
clap = { workspace = true }
git2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
assert_matches = { workspace = true }
