[package]
name = "gitpub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
gitpub-core = { path = "../gitpub-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
