[package]
name = "gitpub-sliplane"
version = "0.1.0"
edition = "2021"

[dependencies]
gitpub-core = { path = "../gitpub-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
reqwest-retry = "0.3"
reqwest-middleware = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5"
