[package]
name = "gitpub-sliplane"
version = "0.1.0"
edition = "2021"

[dependencies]
gitpub-core = { path = "../gitpub-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
reqwest-retry = "0.3"
reqwest-middleware = "0.2"

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
assert_matches = { workspace = true }
wiremock = { workspace = true }
